--- a/CsCourse.WpfErrors.TryCatchExample/MainWindow.xaml
+++ b/CsCourse.WpfErrors.TryCatchExample/MainWindow.xaml
@@ -10,7 +10,7 @@
         <TextBox x:Name="txtNumber1" HorizontalContentAlignment="Right" Margin="10,10,0,0" Text="0" Width="80" Height="20" HorizontalAlignment="Left"  VerticalAlignment="Top" />
         <Label Content="+" Padding="0" HorizontalContentAlignment="Center" Margin="95,10,0,0" Height="20" Width="15" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
         <TextBox x:Name="txtNumber2" HorizontalContentAlignment="Right" Margin="115,9,0,0" Text="0" Width="80" Height="20" HorizontalAlignment="Left"  VerticalAlignment="Top" />
-        <Button x:Name="btnSum" Content="=" Margin="200,9,0,0" Padding="0" VerticalContentAlignment="Center" Height="20" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="25" />
+        <Button x:Name="btnSum" Content="=" Margin="200,9,0,0" Padding="0" VerticalContentAlignment="Center" Height="20" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="25" Click="btnSum_Click" />
         <Border BorderThickness="1" BorderBrush="LightGray" Margin="230,9,10,0" Height="20"  VerticalAlignment="Top" >
             <TextBlock x:Name="tbResult" Text="" Padding="0" TextAlignment="Right"  />
         </Border>
